cria modelo para exclusao

--- a/templates/recupera.html
+++ b/templates/recupera.html
@@ -39,7 +39,7 @@
                         </audio>
                 </td>
                 <td class="td-excluir">
-                    <button class="btn-excluir" onclick="confirmarExclusao()">
+                    <button class="btn-excluir" onclick="confirmarExclusao(this)">
                         Excluir
                     </button>
                 </td>
