--- a/templates/form.html
+++ b/templates/form.html
@@ -17,5 +17,14 @@
 
         <button type="submit">Enviar</button>
     </form>
+    </td>
+    </td>
+    <button onclick="recuperar_dados()">Ir para dados</button>
+
+<script>
+function recuperar_dados() {
+    window.location.href = "/recuperar_dados"; // Substitua com a URL desejada
+}
+</script>
 </body>
 </html>
