--- a/templates/recupera.html
+++ b/templates/recupera.html
@@ -39,6 +39,13 @@
                         Excluir
                     </button>
                 </td>
+
+                <td class="td-atualizar">
+                    <button class="btn-atualizar" onclick="atualizar(this)">
+                        Atualizar
+                    </button>
+                </td>
+
             </tr>
             {% endfor %}
         </tbody>
