--- a/templates/similares.html
+++ b/templates/similares.html
@@ -16,19 +16,19 @@
                 <th>Frequência Média</th>
                 <th>Tom Médio</th>
                 <th>Caminho do Áudio</th>
-                <th>Origem</th>
+                <th>Similaridade</th>
                 <th>Reproduzir Áudio</th>
             </tr>
         </thead>
         <tbody>
-            {% for metadata, document in zip(resultados['metadatas'][0], documentos) %}
+             {% for metadata, document, distance in resultados_combinados %} 
             
             <tr>
                 <td>{{ metadata.nome }}</td> 
-                <td>{{ document.frequencia_media }}</td> 
-                <td>{{ document.tom_medio}}</td> 
+                <td>{{ "%.2f" | format(document.frequencia_media) }}</td> 
+                <td>{{ "%.2f" | format(document.tom_medio) }}</td> 
                 <td>{{ metadata.audio_path }}</td> 
-                <td>{{ metadata.source }}</td>
+                 <td>{{ "%.2f" | format((1 - distance) * 100) }}%</td> 
                 <td>
                         <audio controls>
                             <source src="{{ metadata.audio_path.replace('./', '../') }}" type="audio/mp3">
