--- a/templates/similares.html
+++ b/templates/similares.html
@@ -8,7 +8,11 @@
     <script src="{{ url_for('static', filename='recuperar.js') }}"></script>
 </head>
 <body>
-    <h1>Dados Armazenados no ChromaDB</h1>
+    <h1>Audios similares</h1>
+    <audio controls>
+            <source src="{{ audio_path.replace('./', '../') }}" type="audio/mp3">
+                    Seu navegador não suporta o elemento de áudio.
+        </audio>
     <table border="1">
         <thead>
             <tr>
