--- a/templates/form.html
+++ b/templates/form.html
@@ -10,6 +10,8 @@
     <form action="/processa_dados" method="post" enctype="multipart/form-data">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required><br><br>
+        <label for="dublador">Dublador</label>
+        <input type="text" id="dublador" name="dublador" required><br><br>
         <label for="audio">Áudio:</label>
         <input type="file" id="audio" name="audio" accept="audio/*" required><br><br>
 
