--- a/templates/similares.html
+++ b/templates/similares.html
@@ -21,6 +21,7 @@
                 <th>Tom Médio</th>
                 <th>Caminho do Áudio</th>
                 <th>Similaridade</th>
+                <th>Dublador</th>
                 <th>Reproduzir Áudio</th>
             </tr>
         </thead>
@@ -33,6 +34,7 @@
                 <td>{{ "%.2f" | format(document.tom_medio) }}</td> 
                 <td>{{ metadata.audio_path }}</td> 
                  <td>{{ "%.2f" | format((1 - distance) * 100) }}%</td> 
+                <td>{{ metadata.dublador }}</td>
                 <td>
                         <audio controls>
                             <source src="{{ metadata.audio_path.replace('./', '../') }}" type="audio/mp3">
