--- a/templates/recupera.html
+++ b/templates/recupera.html
@@ -8,7 +8,16 @@
     <script src="{{ url_for('static', filename='recuperar.js') }}"></script>
 </head>
 <body>
-    <h1>Dados Armazenados no ChromaDB</h1>
+    <h1>Dados Armazenados no ChromaDB
+        <div>
+            <a href= "/recuperar_dados" id = "links"> Ir para dados</a>
+            <a href= "/busca" id = "links"> Ir para busca</a>
+            <a href= "/" id = "links"> Ir para envio</a>
+        </div>
+    
+    </h1>
+    
+    </h1>
     <table border="1">
         <thead>
             <tr>
