--- a/static/style.css
+++ b/static/style.css
@@ -43,4 +43,15 @@
     background-color: #4169e183;
     transform: scale(0.98);
   }
+h1{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+#links{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-self: flex-end;
+  padding: 0rem 2rem;
   
+}
