--- a/templates/busca.html
+++ b/templates/busca.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Formulário</title>
 </head>
 <body>
-    <!-- <h1>Enviar Dados para ChromaDB</h1> -->
+    <h1>Busca por similaridade
+        <div>
+            <a href= "/recuperar_dados" id = "links"> Ir para dados</a>
+            <a href= "/busca" id = "links"> Ir para busca</a>
+            <a href= "/" id = "links"> Ir para envio</a>
+        </div>
+    
+    </h1>
     <form action="/similares" method="post" enctype="multipart/form-data">
         <label for="qtd">Quantidade de parecidos:</label>
         <input type="number" id="qtd" name="qtd" min="1" required><br><br>
