--- a/templates/form.html
+++ b/templates/form.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Formulário para envio de áudio
         <div>
-            <a href= "/recuperar_dados" id = "links"> Ir para dados</a>
-            <a href= "/busca" id = "links"> Ir para busca</a>
-            <a href= "/" id = "links"> Ir para envio</a>
+            <a href= "/recuperar_dados" id = "links"> Banco de Dados</a>
+            <a href= "/busca" id = "links"> Busca por similaridade</a>
+            <a href= "/" id = "links"> Formulário de inserção</a>
         </div>
     
     </h1>
