Revert "Merge branch 'main' of https://github.com/VitorFonseca123/Vozes_BD"
This reverts commit 653b55f5787d781d9562f3fe6cc282fa1e3bc40e, reversing
changes made to f492ee1d9c7a11a5e4f1df0d41882f391b1e3334.

--- a/templates/busca.html
+++ b/templates/busca.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Busca por similaridade
         <div>
-            <a href= "/recuperar_dados" id = "links"> Banco de Dados</a>
-            <a href= "/busca" id = "links"> Busca por similaridade</a>
-            <a href= "/" id = "links"> Formulário de inserção</a>
+            <a href= "/recuperar_dados" id = "links"> Ir para dados</a>
+            <a href= "/busca" id = "links"> Ir para busca</a>
+            <a href= "/" id = "links"> Ir para envio</a>
         </div>
     
     </h1>
