adiciona descritores novos

--- a/templates/recupera.html
+++ b/templates/recupera.html
@@ -25,6 +25,7 @@
                 <th>Dublador</th>
                 <th>Frequência Média</th>
                 <th>Tom Médio</th>
+                <th>Croma Médio</th>
                 <th>Caminho do Áudio</th>
                 
                 <th>Reproduzir Áudio</th>
@@ -37,7 +38,9 @@
                 <td>{{ metadata.dublador }}</td> 
                 <td>{{document.frequencia_media}}</td>
                 <td>{{ document.tom_medio }}</td> 
+                <td>{{ document.croma_medio }}</td>
                 <td>{{ metadata.audio_path }}</td> 
+                
                 
                 <td>
                         <audio controls>
