--- a/templates/busca.html
+++ b/templates/busca.html
@@ -7,13 +7,12 @@
     <title>Formulário</title>
 </head>
 <body>
-    <h1>Busca por similaridade
-        <div>
-            <a href= "/recuperar_dados" id = "links"> Ir para dados</a>
-            <a href= "/busca" id = "links"> Ir para busca</a>
-            <a href= "/" id = "links"> Ir para envio</a>
+    <h1>Busca por similaridade 🔍
+        <div class="menu-lateral">
+                <a href= "/recuperar_dados"> 🎙️<span>Ir para dados</span> </a>
+                <a href= "/busca">🔍<span>Ir para busca</span></a>
+                <a href= "/">📤<span>Ir para envio</span></a>
         </div>
-    
     </h1>
     <form action="/similares" method="post" enctype="multipart/form-data">
         <label for="qtd">Quantidade de parecidos:</label>
