--- a/templates/form.html
+++ b/templates/form.html
@@ -7,11 +7,11 @@
     <title>Formulário</title>
 </head>
 <body>
-    <h1>Formulário para envio de áudio
-        <div>
-            <a href= "/recuperar_dados" id = "links"> Ir para dados</a>
-            <a href= "/busca" id = "links"> Ir para busca</a>
-            <a href= "/" id = "links"> Ir para envio</a>
+    <h1>Formulário para envio de áudio 📤
+        <div class="menu-lateral">
+            <a href= "/recuperar_dados"> 🎙️<span>Ir para dados</span> </a>
+            <a href= "/busca">🔍<span>Ir para busca</span></a>
+            <a href= "/">📤<span>Ir para envio</span></a>
         </div>
     
     </h1>
