--- a/templates/recupera.html
+++ b/templates/recupera.html
@@ -8,11 +8,11 @@
     <script src="{{ url_for('static', filename='recuperar.js') }}"></script>
 </head>
 <body>
-    <h1>Dados Armazenados no ChromaDB
-        <div>
-            <a href= "/recuperar_dados" id = "links"> Ir para dados</a>
-            <a href= "/busca" id = "links"> Ir para busca</a>
-            <a href= "/" id = "links"> Ir para envio</a>
+    <h1>Dados Armazenados no ChromaDB 🎙️
+        <div class="menu-lateral">
+            <a href= "/recuperar_dados"> 🎙️<span>Ir para dados</span> </a>
+            <a href= "/busca">🔍<span>Ir para busca</span></a>
+            <a href= "/">📤<span>Ir para envio</span></a>
         </div>
     
     </h1>
