Aumentando tamanho da tabela de dados

--- a/static/style.css
+++ b/static/style.css
@@ -65,7 +65,10 @@ a {
 a:hover {
   text-decoration: underline;
 }
-
+table{
+  font-size: xx-large;
+  width: 100%;
+}
 .td-excluir{
     border: 0px;
 }
