--- a/static/style.css
+++ b/static/style.css
@@ -69,6 +69,16 @@ a:hover {
 table{
   font-size: xx-large;
   width: 100%;
+  border-collapse: collapse;
+}
+table th{
+  background-color: #405030;
+}
+table tr:nth-child(even){
+  background-color: #304050;
+}
+table tr:hover{
+  background-color: #403050;
 }
 .td-excluir{
     border: 0px;
@@ -78,7 +88,7 @@ table{
     color: white;
     border: none;
     padding: 10px 20px;
-    font-size: 16px;    
+    font-size: x-large;    
     border-radius: 8px;
     transition: background-color 0.3s ease, transform 0.2s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -101,7 +111,7 @@ table{
     color: white;
     border: none;
     padding: 10px 20px;
-    font-size: 16px;    
+    font-size: x-large;    
     border-radius: 8px;
     transition: background-color 0.3s ease, transform 0.2s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
