--- a/templates/recupera.html
+++ b/templates/recupera.html
@@ -18,6 +18,8 @@
     </h1>
     
     </h1>
+    <div class="table-container">
+    
     <table border="1">
         <thead>
             <tr>
@@ -67,5 +69,6 @@
             {% endfor %}
         </tbody>
     </table>
+    </div>
 </body>
 </html>
